[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/Camera.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Player.gd" type="Script" id=2]
[ext_resource path="res://Scenes/Universal/ShadowGuide.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.290196, 0.894118, 0.584314, 1 )
metallic_specular = 0.0

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.7, 0.7, 0.7 )

[sub_resource type="SphereShape" id=5]

[node name="Player" type="KinematicBody" groups=["player"]]
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0 )
shape = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="Hitbox" type="Area" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape" type="CollisionShape" parent="Hitbox"]
shape = SubResource( 4 )

[node name="ShadowGuide" parent="." instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6.86082, 0 )

[node name="CameraPos" type="Position3D" parent="."]
unique_name_in_owner = true
transform = Transform( 1, 0, 0, 0, 0.939693, 0.34202, 0, -0.34202, 0.939693, 0, 0, 0 )
script = ExtResource( 1 )

[node name="SpringArm" type="SpringArm" parent="CameraPos"]
collision_mask = 0
shape = SubResource( 5 )
spring_length = 8.0
margin = 0.2

[node name="Camera" type="Camera" parent="CameraPos/SpringArm"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3.26613 )
current = true
fov = 50.0
far = 500.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="area_entered" from="Hitbox" to="." method="_on_Hitbox_area_entered"]
